--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -64,3 +64,273 @@ h1, h2, h3, h4, h5 {
 }
 
 /* Copy and paste your work from yesterday here and start to refactor into flexbox */
+
+
+/*============= Your code starts here! *====================== This is CSS code for MAIN page====================/
+/*===============GLOBAL=============================*/
+/*
+body{
+    margin: 0 auto;
+    width: 1000px;
+}
+*/
+/*====================nav bar=======================*/
+nav{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    justify-content: space-around;
+    padding: 30px;
+    
+/* old code-------------------
+    width: 100%;
+    text-align: center;
+    overflow: hidden;
+    position: fixed;
+*/
+}
+nav a{
+    color: dimgrey;
+    text-decoration: none;
+    
+/* old code---------------------
+    margin: 15px;
+    padding: 2px 15px 2px 15px;
+    color: dimgrey;
+    border: 2px solid black;
+    border-radius: 25px;
+    text-decoration: none;
+    background-color: aqua;
+    
+    margin: 0 3.4%;
+    text-decoration: none;
+    color: dimgrey;
+    background-color: aqua;
+    border: 2px solid black;
+    border-radius: 25px;
+*/
+}
+
+/*Definitely wanted to redo it and make every link
+individual so the animation is not overtaking the
+whole width but decided to not over do it for now.
+It also does look better without the resizing down, but left it like that for this one.*/
+
+/*
+nav a:hover{
+    animation-name: fancy;
+    animation-duration: 4s;
+    animation-iteration-count:infinite;
+    padding: 15px;
+}
+
+@keyframes fancy{
+     0%{
+        background-color: #F87B99;
+        color:white;
+        padding: 15px;
+  }
+    50%{
+        background-color: skyblue;
+        color: pink;
+        padding: 10px;
+  }
+    90%{
+        background-color: pink;
+        color: blue;
+        padding: 5px;
+
+    }
+    100%{
+        background-color: #F87B99;
+        color: whitesmoke;
+        padding: 3px;
+
+  }
+}
+nav img{
+    margin: 2%;
+    vertical-align: middle;
+}
+*/
+
+/*================header logo main section==========*/
+header{
+    display: flex;
+    justify-content: space-around;
+    padding-top: 20px;
+    
+/* old code----------------
+    width: 100%;ß
+    display: -block;
+    padding-top: 100px;
+*/
+}
+
+aside{
+    display: flex;
+    flex-direction: column;
+    font-family: 'Bangers', cursive;
+    font-size: 80px;
+    text-align: center;
+    justify-content: center;
+    margin-left: 120px;
+*/
+}
+
+.getStarted{
+    display:flex;
+    width: 50%;
+    justify-content: center;
+    align-self:center;
+    margin: 3%;
+    padding: 2% 10%;
+    font-size: 14px;
+}
+figure{
+    
+    margin-left: 100px;
+    margin-right: 120px;
+}
+
+/*===============SECOND HALF=======================*/
+
+.borderStyle{
+    border-top: 1px solid black;
+    border-bottom: 1px solid black;
+    margin: 5% 5.5%;
+    padding: 30px 0;
+}
+
+section{
+    display: flex;
+}
+
+.feature{
+/*
+    width: 50%;
+    padding-right: 3%;   
+*/
+}
+
+.about{
+/*
+    width: 49%;
+    padding-right: 3%;
+*/
+}
+
+.middle-img{
+    margin: 0 auto;
+    width: 100%;
+    padding: 35px 0;
+}
+
+.services,.product, .vision {
+    width: 33%;
+    padding-right: 4%;
+}
+
+footer{
+    display: flex;
+    flex-direction: column;
+    width: 94%;
+    float:right;
+}
+
+/*=======================COPYRIGHT==================*/
+
+.copyright{
+    text-align: center;
+    margin: 7%;
+}
+
+/*================= END OF MAIN PAGE ==================/
+
+/*============= SERVICE PAGE CSS START ===============*/
+
+
+.imgHeader{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding-bottom: 40px;
+    padding-left: 6%;
+    padding-right: 6%;
+}
+
+.imgHeader div h2{
+    font-size: 25px;
+}
+
+.wrap{
+    display: flex;
+    flex-flow: wrap;
+    margin: 0 3.3%;
+/*
+    border-top: 2px solid black;
+    border-bottom: 2px solid black;
+    width: 95%;
+    margin: 0% auto;
+*/
+}
+
+hr{
+    width: 88%;
+    padding: 4
+}
+
+.wrap div{
+    display: flex;
+    flex-direction: column;
+    
+    width: 44%;
+    border: 1px solid black;
+    padding: 2%;
+    margin: 3%;
+    background-color: lightgrey
+}
+
+button{
+    text-align: center;
+    width: 35%;
+    padding-left: 4%;
+    margin-top: 10px;
+    padding: 2% 0;
+}
+/*
+section.wrap2 div{
+    display: flex;
+    flex-direction: column;
+    width: 50%;
+}
+*/
+
+
+.wrap2{
+    margin: 2% 6%;
+    padding-top: 2%;
+}
+ul.list{
+    list-style-type: square;
+    line-height: normal;
+    
+    padding-left: 4%;
+    padding-top: 5%;
+/*    display: flex;*/
+/*    flex-direction: column;*/
+/*    text-align: left;*/
+}
+
+
+
+/*
+.wrap div p, .wrap div h3{
+    padding: 5%;
+}
+*/
+
+
+
+
+
